force-app/main/default/objects/Expenditure__c/Expenditure__c.object-meta.xml
<CustomObject>
    <label>Expenditure</label>
    <nameField>
        <displayFormat>EXP-{0000}</displayFormat>
        <label>Expense ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Expenditures</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>