force-app/main/default/objects/Expenditure__c/fields/Expenditure_Description__c.field-meta.xml
<CustomField>
    <fullName>Expenditure_Description__c</fullName>
    <label>Expenditure Description</label>
    <length>200</length>
    <type>Text</type>
</CustomField>