force-app/main/default/objects/Expenditure__c/fields/Expense_type__c.field-meta.xml
<CustomField>
    <fullName>Expense_type__c</fullName>
    <label>Expense type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Salary</fullName>
            </value>
            <value>
                <fullName>Purchase</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>